fix grid spacing

--- a/ui/style.css
+++ b/ui/style.css
@@ -207,15 +207,15 @@ input::-webkit-inner-spin-button {
 }
 
 .main-container {
-    border-top: 5px solid var(--color-3);
+    /* border-top: 5px solid var(--color-3); */
     width: 100%;
     height: 79.5%;
     position: absolute;
     display: grid;
-    grid-template-columns: 10vh 1fr 1fr 1fr;
+    grid-template-columns: 0fr 1fr 1fr auto ;
     grid-gap: var(--small-margin);
     bottom: 0;
-    padding: var(--small-padding) var(--small-padding) var(--small-padding) 0;
+    padding-right: var(--small-padding);
 }
 
 .nav-menu {
